закончены блок 1 и блок 2

--- a/index.html
+++ b/index.html
@@ -69,16 +69,23 @@
 <!-- hero-image -->
 <section class="section-outer section-hero-image">
     <ul class="slider-hero-image">
-        <li class="slider-hero-image__item">
+        <li class="slider-hero-image__item" style="background-image: url(upload/hero-image1.png)">
             <div class="section-inner slider-hero-image__item-content">
                 <h5>PLAN YOUR LIFE</h5>
-                <h2>Increase your productivity</h2>
+                <h2>Increase your <span>productivity</span></h2>
                 <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis distinctio eum ipsa nam nobis optio. Blanditiis error nesciunt non rem similique! Alias animi omnis reiciendis ut veniam vero voluptate voluptatum?</div>
-                <div class="btn">
-                    Button
+                <div class="btn-icon-text-wrapper">
+                    <a href="#">
+                        <i class="icon-play"></i>
+                    </a>
                 </div>
             </div>
         </li>
+    </ul>
+    <ul class="dots">
+        <li class="dots__item dots__item--active"></li>
+        <li class="dots__item"></li>
+        <li class="dots__item"></li>
     </ul>
 </section>
 <!-- / hero-image -->
@@ -86,7 +93,11 @@
 <!-- section-customers -->
 <section class="section-outer section-customers">
     <div class="section-inner">
-        customers
+        <a href="#"><img src="img/logo-bitbucket.svg" alt=""></a>
+        <a href="#"><img src="img/logo-apple.svg" alt=""></a>
+        <a href="#"><img src="img/logo-facebook.svg" alt=""></a>
+        <a href="#"><img src="img/logo-atlassian.svg" alt=""></a>
+        <a href="#"><img src="img/logo-audi.svg" alt=""></a>
     </div>
 </section>
 <!-- / section-customers -->
