закончены блок 3 и блок 4

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="section-inner slider-hero-image__item-content">
                 <h5>PLAN YOUR LIFE</h5>
                 <h2>Increase your <span>productivity</span></h2>
-                <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis distinctio eum ipsa nam nobis optio. Blanditiis error nesciunt non rem similique! Alias animi omnis reiciendis ut veniam vero voluptate voluptatum?</div>
+                <div class="text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
                 <div class="btn-icon-text-wrapper">
                     <a href="#">
                         <i class="icon-play"></i>
@@ -105,7 +105,21 @@
 <!-- section-plan-and-manage -->
 <section class="section-outer section-plan-and-manage">
     <div class="section-inner">
-        plan-and-manage
+        <div class="section-plan-and-manage__content">
+            <h5>DESKTOP AND MOBILE APP</h5>
+            <h3><span>Plan</span> and <span>manage</span></h3>
+            <div class="text">
+                Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata. Solum patrioque no sea. Mea ex malis mollis oporteat. Eum an expetenda consequat.
+            </div>
+            <div class="btn-group">
+                <a href="#" class="btn btn--secondary">
+                    View video
+                    <svg width="7" height="8" viewBox="0 0 7 8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 2.73354C6.66667 3.11844 6.66667 4.08069 6 4.46559L1.5 7.06367C0.833333 7.44857 0 6.96744 0 6.19764V1.00149C0 0.231691 0.833333 -0.249434 1.5 0.135467L6 2.73354Z" fill="white"/></svg>
+                </a>
+                <a href="#" class="btn btn--no-bg">See features</a>
+            </div>
+            <img src="upload/plan-and-manage.png" alt="" class="aside-image">
+        </div>
     </div>
 </section>
 <!-- / section-plan-and-manage -->
@@ -113,7 +127,43 @@
 <!-- section-features -->
 <section class="section-outer section-features">
     <div class="section-inner">
-        features
+        <h5 class="ta-c">ABOUT US</h5>
+        <h4 class="ta-c">Read about our app</h4>
+        <ul class="features-list">
+            <li class="features-list__item">
+                <div class="features-list__item-icon">
+                    <img src="img/feature-icon1.svg" alt="">
+                </div>
+                <div class="features-list__item-title">Overview</div>
+                <div class="features-list__item-text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
+            </li>
+            <li class="features-list__item">
+                <div class="features-list__item-icon">
+                    <img src="img/feature-icon2.svg" alt="">
+                </div>
+                <div class="features-list__item-title">Files</div>
+                <div class="features-list__item-text">No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.</div>
+            </li>
+            <li class="features-list__item">
+                <div class="features-list__item-icon">
+                    <img src="img/feature-icon3.svg" alt="">
+                </div>
+                <div class="features-list__item-title">Meeting chats</div>
+                <div class="features-list__item-text">Vim ne tacimates neglegentur. Erat diceret omittam at est.</div>
+            </li>
+            <li class="features-list__item">
+                <div class="features-list__item-icon">
+                    <img src="img/feature-icon4.svg" alt="">
+                </div>
+                <div class="features-list__item-title">Save events</div>
+                <div class="features-list__item-text">Nisl idque mel ea, nominati voluptatum.</div>
+            </li>
+        </ul>
+        <div class="btns">
+            <a href="#" class="btn btn--danger">Read more</a>
+            <span class="or-block">OR</span>
+            <a href="#" class="btn btn--primary">Get started</a>
+        </div>
     </div>
 </section>
 <!-- / section-features -->
