--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-<!-- header -->
+<!-- section-header -->
 <header class="section-outer section-header">
     <div class="section-inner section-inner--wide">
         <div class="main-navigation">
@@ -64,12 +64,12 @@
         </div>
     </div>
 </header>
-<!-- / header -->
+<!-- / section-header -->
 
-<!-- hero-image -->
+<!-- section-hero-image -->
 <section class="section-outer section-hero-image">
     <ul class="slider-hero-image">
-        <li class="slider-hero-image__item" style="background-image: url(upload/hero-image1.png)">
+        <li class="slider-hero-image__item" style="background-image: url(img/hero-image1.png)">
             <div class="section-inner slider-hero-image__item-content">
                 <h5>PLAN YOUR LIFE</h5>
                 <h2>Increase your <span>productivity</span></h2>
@@ -88,7 +88,7 @@
         <li class="dots__item"></li>
     </ul>
 </section>
-<!-- / hero-image -->
+<!-- / section-hero-image -->
 
 <!-- section-customers -->
 <section class="section-outer section-customers">
@@ -118,7 +118,7 @@
                 </a>
                 <a href="#" class="btn btn--no-bg">See features</a>
             </div>
-            <img src="upload/plan-and-manage.png" alt="" class="aside-image">
+            <img src="img/plan-and-manage.png" alt="" class="aside-image">
         </div>
     </div>
 </section>
@@ -132,28 +132,28 @@
         <ul class="features-list">
             <li class="features-list__item">
                 <div class="features-list__item-icon">
-                    <img src="img/feature-icon1.svg" alt="">
+                    <svg width="18" height="21" viewBox="0 0 18 21" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 7.87273V19H6.42105L9 17L11.5789 19H16V7.87273L9 2L2 7.87273Z" stroke="#4074F8" stroke-width="2.5"/></svg>
                 </div>
                 <div class="features-list__item-title">Overview</div>
                 <div class="features-list__item-text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro.</div>
             </li>
             <li class="features-list__item">
                 <div class="features-list__item-icon">
-                    <img src="img/feature-icon2.svg" alt="">
+                    <svg width="28" height="18" viewBox="0 0 28 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.7544 16H12.0877H9.19945H2V5.94956V2H12.0877L13.7018 5.16129H19.7544V6.96774M19.7544 16L25 6.96774H19.7544M19.7544 16V6.96774" stroke="#4074F8" stroke-width="2.5"/></svg>
                 </div>
                 <div class="features-list__item-title">Files</div>
                 <div class="features-list__item-text">No vim nulla vitae intellegat. Ei enim error ius, solet atomorum conceptam ex has.</div>
             </li>
             <li class="features-list__item">
                 <div class="features-list__item-icon">
-                    <img src="img/feature-icon3.svg" alt="">
+                    <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 2V6.94956V13.5H4.28115L5.5 17L9 13.5H13.7018H19.7544V7.96774V2H17H12.5H2Z" stroke="#4074F8" stroke-width="2.5"/></svg>
                 </div>
                 <div class="features-list__item-title">Meeting chats</div>
                 <div class="features-list__item-text">Vim ne tacimates neglegentur. Erat diceret omittam at est.</div>
             </li>
             <li class="features-list__item">
                 <div class="features-list__item-icon">
-                    <img src="img/feature-icon4.svg" alt="">
+                    <svg width="21" height="19" viewBox="0 0 21 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 11.9677V17.5H4.28115H9H13.7018H19.2544V11.9677M6.75439 5L10.7544 2M14.7544 5L10.7544 2M10.7544 2V12.5" stroke="#4074F8" stroke-width="2.5"/></svg>
                 </div>
                 <div class="features-list__item-title">Save events</div>
                 <div class="features-list__item-text">Nisl idque mel ea, nominati voluptatum.</div>
@@ -170,8 +170,19 @@
 
 <!-- section-stats -->
 <section class="section-outer section-stats">
-    <div class="section-inner">
-        stats
+    <div class="section-stats__left">
+        <div class="section-stats__icon">
+            <img src="img/icon-stats-left.svg" alt="">
+        </div>
+        <div class="section-stats__number">89%</div>
+        <div class="section-stats__text">Customers who have increased their productivity</div>
+    </div>
+    <div class="section-stats__right">
+        <div class="section-stats__icon">
+            <img src="img/icon-stats-right.svg" alt="">
+        </div>
+        <div class="section-stats__number">3123</div>
+        <div class="section-stats__text">Users who have used our application</div>
     </div>
 </section>
 <!-- / section-stats -->
@@ -179,7 +190,45 @@
 <!-- section-blog -->
 <section class="section-outer section-blog">
     <div class="section-inner">
-        blog
+        <h5 class="ta-c">OUR RESOURCES</h5>
+        <h4 class="ta-c">Start reading our blog</h4>
+        <div class="slider-wrapper">
+            <ul class="slider-blog">
+                <li class="slider-blog__item">
+                    <div class="slider-blog__item-gallery">
+                        <a href="" class="image-link image-link--b">
+                            <img alt="" src="img/blog-pic1.png"/>
+                            <span class="loupe"></span>
+                        </a>
+                        <a href="" class="image-link image-link--s-1">
+                            <img alt="" src="img/blog-pic2.png"/>
+                            <span class="loupe"></span>
+                        </a>
+                        <a href="" class="image-link image-link--s-2">
+                            <img alt="" src="img/blog-pic3.png"/>
+                            <span class="loupe"></span>
+                        </a>
+                    </div>
+                    <div class="slider-blog__item-content">
+                        <h3>How to start planning</h3>
+                        <div class="text">
+                            Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti. Natum petentium principes mei ea. Tota everti periculis vis ei, quas tibique pro at, eos ut decore ...
+                        </div>
+                        <div class="btn-group">
+                            <a href="#" class="btn btn--primary">Read now</a>
+                            <a href="#" class="btn btn--no-bg">Add to your bookmarks</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <a href="#" class="btn-blog btn-blog--prev"></a>
+            <a href="#" class="btn-blog btn-blog--next"></a>
+        </div>
+        <ul class="dots">
+            <li class="dots__item dots__item--active"></li>
+            <li class="dots__item"></li>
+            <li class="dots__item"></li>
+        </ul>
     </div>
 </section>
 <!-- / section-blog -->
@@ -187,7 +236,36 @@
 <!-- section-quotes -->
 <section class="section-outer section-quotes">
     <div class="section-inner">
-        quotes
+        <div class="section-quotes__left">
+            <h5>TESTIMONIALS</h5>
+            <h3>Customers's quotes</h3>
+            <div class="text">
+                Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an.
+            </div>
+        </div>
+        <div class="section-quotes__right">
+            <ul class="slider-quotes">
+                <li class="slider-quotes__item">
+                    <div class="slider-quotes__item--text">
+                        Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                    </div>
+                    <div class="slider-quotes__item-photo">
+                        <img src="img/quotes-pic.svg" alt="">
+                    </div>
+                </li>
+            </ul>
+            <ul class="dots">
+                <li class="dots__item dots__item--active"></li>
+                <li class="dots__item"></li>
+                <li class="dots__item"></li>
+                <li class="dots__item"></li>
+                <li class="dots__item"></li>
+                <li class="dots__item"></li>
+                <li class="dots__item"></li>
+                <li class="dots__item"></li>
+                <li class="dots__item"></li>
+            </ul>
+        </div>
     </div>
 </section>
 <!-- / section-quotes -->
@@ -195,7 +273,30 @@
 <!-- section-faq -->
 <section class="section-outer section-faq">
     <div class="section-inner">
-        faq
+        <h5 class="ta-c">Customer help</h5>
+        <h4 class="ta-c">Frequently asked questions</h4>
+        <ul class="faq-accordion">
+            <li class="faq-accordion__item">
+                <div class="faq-accordion__item-trigger">
+                    <div class="faq-accordion__item-trigger-icon">
+                        <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="arrow" id="Vector" d="M16 9L9 2L2 9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <div class="faq-accordion__item-trigger-text">
+                        Lorem repudiandae ne nec?
+                    </div>
+                </div>
+                <div class="faq-accordion__item-content">
+                    <div class="faq-accordion__item-content-text">
+                        Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                    </div>
+                    <div class="faq-accordion__item-content-btn">
+                        <a href="#" class="btn btn--primary">Go to documentation</a>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
 <!-- / section-faq -->
