закончены блоки faq, get-started, newsletter

--- a/index.html
+++ b/index.html
@@ -284,6 +284,46 @@
                         </svg>
                     </div>
                     <div class="faq-accordion__item-trigger-text">
+                        Reque insolens in vel?
+                    </div>
+                </div>
+                <div class="faq-accordion__item-content">
+                    <div class="faq-accordion__item-content-text">
+                        Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                    </div>
+                    <div class="faq-accordion__item-content-btn">
+                        <a href="#" class="btn btn--grayscale">Go to documentation</a>
+                    </div>
+                </div>
+            </li>
+            <li class="faq-accordion__item">
+                <div class="faq-accordion__item-trigger">
+                    <div class="faq-accordion__item-trigger-icon">
+                        <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="arrow" id="Vector" d="M16 9L9 2L2 9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <div class="faq-accordion__item-trigger-text">
+                        Vis rebum error graecis ea, id sit postea accusamus?
+                    </div>
+                </div>
+                <div class="faq-accordion__item-content">
+                    <div class="faq-accordion__item-content-text">
+                        Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                    </div>
+                    <div class="faq-accordion__item-content-btn">
+                        <a href="#" class="btn btn--grayscale">Go to documentation</a>
+                    </div>
+                </div>
+            </li>
+            <li class="faq-accordion__item faq-accordion__item--active">
+                <div class="faq-accordion__item-trigger">
+                    <div class="faq-accordion__item-trigger-icon">
+                        <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="arrow" id="Vector" d="M16 9L9 2L2 9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <div class="faq-accordion__item-trigger-text">
                         Lorem repudiandae ne nec?
                     </div>
                 </div>
@@ -292,7 +332,47 @@
                         Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
                     </div>
                     <div class="faq-accordion__item-content-btn">
-                        <a href="#" class="btn btn--primary">Go to documentation</a>
+                        <a href="#" class="btn btn--grayscale">Go to documentation</a>
+                    </div>
+                </div>
+            </li>
+            <li class="faq-accordion__item">
+                <div class="faq-accordion__item-trigger">
+                    <div class="faq-accordion__item-trigger-icon">
+                        <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="arrow" id="Vector" d="M16 9L9 2L2 9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <div class="faq-accordion__item-trigger-text">
+                        Ad dicit numquam vel. Et eos iudico feugait percipitur?
+                    </div>
+                </div>
+                <div class="faq-accordion__item-content">
+                    <div class="faq-accordion__item-content-text">
+                        Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                    </div>
+                    <div class="faq-accordion__item-content-btn">
+                        <a href="#" class="btn btn--grayscale">Go to documentation</a>
+                    </div>
+                </div>
+            </li>
+            <li class="faq-accordion__item">
+                <div class="faq-accordion__item-trigger">
+                    <div class="faq-accordion__item-trigger-icon">
+                        <svg width="18" height="11" viewBox="0 0 18 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="arrow" id="Vector" d="M16 9L9 2L2 9" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <div class="faq-accordion__item-trigger-text">
+                        Sea no dico percipitur. Fierent constituam definitiones id eum?
+                    </div>
+                </div>
+                <div class="faq-accordion__item-content">
+                    <div class="faq-accordion__item-content-text">
+                        Quidam vocibus eum ne, erat consectetuer voluptatibus ut nam. Eu usu vidit tractatos, vero tractatos ius an, in mel diceret persecuti.
+                    </div>
+                    <div class="faq-accordion__item-content-btn">
+                        <a href="#" class="btn btn--grayscale">Go to documentation</a>
                     </div>
                 </div>
             </li>
@@ -304,7 +384,13 @@
 <!-- section-get-started -->
 <section class="section-outer section-get-started">
     <div class="section-inner">
-        get-started
+        <h5>PLAN YOUR LIFE</h5>
+        <h2>Get <span>started </span>now</h2>
+        <div class="text">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</div>
+        <div class="btn-group">
+            <a href="#" class="btn btn--secondary btn--secondary-inverted">View pricing</a>
+            <a href="#" class="btn btn--no-bg btn--no-bg-inverted">Read documentation</a>
+        </div>
     </div>
 </section>
 <!-- / section-get-started -->
@@ -312,7 +398,16 @@
 <!-- section-newsletter -->
 <section class="section-outer section-newsletter">
     <div class="section-inner">
-        newsletter
+        <div class="section-newsletter__left">
+            <div class="section-newsletter__left-title">Sign up for newsletter</div>
+            <div class="section-newsletter__left-text">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu, homero alterum.</div>
+        </div>
+        <div class="section-newsletter__right">
+            <form action="" class="form-newsletter">
+                <input type="text" class="input input--size-lg" placeholder="Email adress">
+                <button class="btn btn--secondary btn--size-lg">Save me</button>
+            </form>
+        </div>
     </div>
 </section>
 <!-- / section-newsletter -->
