--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Landing page">
-    <title>APP Landing</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
     <!-- section-header -->
@@ -20,7 +19,7 @@
                         <span class="visually-hidden">Logo</span>
                     </a>
                 </h1>
-                <button class="btn btn--no-bg btn-burger">
+                <button class="btn btn--no-bg btn-burger" aria-label="Toggle navigation">
                     <span class="btn-burger__line"></span>
                     <span class="btn-burger__line"></span>
                     <span class="btn-burger__line"></span>
@@ -488,6 +487,10 @@
         </div>
     </footer>
     <!-- / section-footer -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </body>
 
 </html>
