--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- section-hero-image -->
         <section class="section-outer section-hero-image">
             <ul class="slider-hero-image">
-                <li class="slider-hero-image__item" style="background-image: url(img/hero-image1.png)">
+                <li class="slider-hero-image__item" style="background-image: url(img/hero-image1.webp)">
                     <div class="section-inner slider-hero-image__item-content vertical-indent vertical-indent--l" >
                         <h2>PLAN YOUR LIFE</h2>
                         <div class="section-subtitle">Increase your <span>productivity</span></div>
@@ -130,7 +130,8 @@
                         </a>
                         <a href="#" class="btn btn--no-bg">See features</a>
                     </div>
-                    <img src="img/plan-and-manage.png" alt="" class="aside-image">
+                    <img src="img/plan-and-manage.webp" alt="" class="aside-image">
+                    <img src="img/plan-and-manage-mini.webp" alt="" class="aside-image-mini" />
                 </div>
             </div>
         </section>
@@ -210,13 +211,13 @@
                         <li class="slider-blog__item">
                             <div class="slider-blog__item-gallery">
                                 <a href="#" class="image-link image-link--b" aria-label="Image 1">
-                                    <img alt="" src="img/blog-pic1.png"/>
+                                    <img alt="" src="img/blog-pic1.webp"/>
                                 </a>
                                 <a href="#" class="image-link image-link--s-1" aria-label="Image 2">
-                                    <img alt="" src="img/blog-pic2.png"/>
+                                    <img alt="" src="img/blog-pic2.webp"/>
                                 </a>
                                 <a href="#" class="image-link image-link--s-2" aria-label="Image 3">
-                                    <img alt="" src="img/blog-pic3.png"/>
+                                    <img alt="" src="img/blog-pic3.webp"/>
                                 </a>
                             </div>
                             <div class="slider-blog__item-content">
